# a3mtools

./: .gitignore  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml
a3mtools/: __init__.py  config.py  examples.py  executables.yaml
a3mtools/backend/: a3m_tools.py
a3mtools/tests/: test_a3m_alignment.py  test_a3mtools.py
a3mtools/tools/: a3m_alignment_test.py  cli_wrappers.py  sequence_utils.py
demo/: demo.ipynb  example_complex.a3m
devtools/: readme.md
devtools/conda-envs/: test_env.yaml
docs/: mkdocs.yml
docs/docs/: index.md
