[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "a3mtools"
version = "0.0.1"
description = "tools for working with a3m files. Designed for manipulating results from colabfold (MSAs) and generating input for structure prediction tools like alphafold"
authors = [
  { name = "Jackson Halpin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.flit.sdist]
include = [
    "a3mtools/test_data/*",
]

# [tool.black]
# line-length = 99
# include = '\.pyi?$'
# exclude = '''
# /(
#     \.git
#   | \.venv
# )/
# '''

[tool.ruff.lint.isort]
known_first_party = ["a3mtools"]
force_sort_within_sections = true

